Update 01-terraform-provision-aks-cluster-pipeline.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -14,7 +14,7 @@ stages:
   - stage: 
     jobs:
       - job: TerraformvalidateJob
-        continueOnError: Flase
+        continueOnError: false
         steps:
         - task: PublishPipelineArtifact@1
           displayName: PublishArtifacts
