--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -1,5 +1,5 @@
 trigger:
-- main
+- master
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -100,3 +100,54 @@ stages:
                 environmentServiceName: 'aks-azurerm-svc-con'
                 commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
                 allowTelemetryCollection: true
+
+# Deploy QA Cluster
+
+
+    - deployment: DeployQAAksCluster
+      dependsOn: DeployDevAKSCluster
+      displayName: DeployQAAksCluster
+      pool:
+        vmImage: 'ubuntu-latest'
+      environment: $(QA_ENVIRONMENT)
+      strategy:
+            runOnce:
+              deploy:
+                steps:
+                - task: DownloadSecureFile@1
+                  displayName: DownloadSecureFileSSHKEYS
+                  name: sshkey
+                  inputs:
+                    secureFile: 'id_rsa.pub'
+
+                - task: TerraformCLI@0
+                  displayName: TerraformInit
+                  inputs:
+                    command: 'init'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    backendType: 'azurerm'
+                    backendServiceArm: 'aks-azurerm-svc-con'
+                    backendAzureRmSubscriptionId: '74689d90-fec6-4abb-bb50-3a496edbc727'
+                    backendAzureRmResourceGroupName: 'Azure-Sentinel'
+                    backendAzureRmStorageAccountName: 'terraformremotestorge'
+                    backendAzureRmContainerName: 'tfstatemds'
+                    backendAzureRmKey: 'aks-$(QA_ENVIRONMENT).tfstate'
+                    allowTelemetryCollection: false
+
+                - task: TerraformCLI@0
+                  displayName: TerraforPlan
+                  inputs:
+                    command: 'plan'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    environmentServiceName: 'aks-azurerm-svc-con'
+                    commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(QA_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(QA_ENVIRONMENT)-$(Build.BuildId).out'
+                    allowTelemetryCollection: false
+
+                - task: TerraformCLI@0
+                  displayName: TerraforPlan
+                  inputs:
+                    command: 'apply'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    environmentServiceName: 'aks-azurerm-svc-con'
+                    commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(QA_ENVIRONMENT)-$(Build.BuildId).out'
+                    allowTelemetryCollection: true
